# rufum

./: CMakeLists.txt  LICENSE.txt  README.md
config/: internal.h.in  rufum.h.in
lib/: CMakeLists.txt
lib/common/: lstring.c  lstring.h  memory.h  status.h
lib/config/: external.h.in
lib/lexer/: categories.i.c  lexer.c  lexer.h  lunit.h  skip.i.c  source.c  source.h  util.i.c
lib/parser/: ast.h  categories.i.c  lexer.c  lexer.h  lstatus.h  lunit.h  parser.c  skip.i.c  source.c  source.h
lib/tests/: CMakeLists.txt
lib/tests/lexer/: CMakeLists.txt  contents.h  list.c  list.h  main.c  read.c  read.h  scan.c  scan.h  write.c  write.h
lib/tests/lexer/in/: binary.in  decimal.in  empty.in  hexadecimal.in  identifier.in  newline.in  octal.in  skipped.in
lib/tests/lexer/rf/: binary.rf  decimal.rf  hexadecimal.rf  identifier.rf  octal.rf  skipped.rf
lib/tests/lexer/src/: contents.c  list.c  main.c  msg.h  read.h  scan.c  write.c
